fixed hero-bg position on smaller screens

--- a/scss/components/_mobile-nav.scss
+++ b/scss/components/_mobile-nav.scss
@@ -16,7 +16,6 @@
   }
   &__item {
     &:hover {
-      background-color: red;
     }
   }
   &__item + &__item {
